lore page is done, few more fixes to do

--- a/edgerunners.html
+++ b/edgerunners.html
@@ -39,7 +39,7 @@
                       <a class="nav-link" href="game.html">GAME</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">LORE</a>
+                      <a class="nav-link" href="lore.html">LORE</a>
                     </li>
                   </ul>
               </div>
@@ -48,7 +48,13 @@
 
         
     </section>
-
+<aside class="cyberpunk">
+  <ul>
+    <li><a href="#">&#9760; 555 555 555</a></li>
+    <li><a href="#">&#x2622; Contact us</a></li>
+    <li><a href="#">&#x267B; Location in the map</a></li>
+  </ul>
+</aside>
 
         <section>
         
