--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <a class="nav-link" href="game.html">GAME</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">LORE</a>
+                    <a class="nav-link" href="lore.html">LORE</a>
                   </li>
                 </ul>
               </div>
