all content is done and responsive version finished

--- a/comics.html
+++ b/comics.html
@@ -9,10 +9,7 @@
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link>
   <title>Comics</title>
-  <link
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-  rel="stylesheet"
-/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="style.css">
   <!-- <link rel="stylesheet" href="cyberpunk-effects.css"> -->
   <link rel="stylesheet" href="edgerunners.css">
@@ -69,24 +66,25 @@
 
 
   </section>
+
   <section class="bg-dark py-5">
     <div class="container justify-content-center">
       <div class="row justify-content-center">
-        <div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="comics  glitch">
+        <div class="col-8">
+          <div data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="comics  glitch">
+          </div>
         </div>
       </div>
     </div>
-    <button
-        type="button"
-        class="btn btn-danger btn-floating "
-        id="btn-back-to-top"
-        >
-  <i class="fas fa-arrow-up"></i>
-</button>
+    <button type="button" class="btn btn-danger btn-floating " id="btn-back-to-top">
+      <i class="fas fa-arrow-up"></i>
+    </button>
 
 
   </section>
-
+  <section>
+    <img src="img/waves.png" alt="" style="transform: rotate(180deg); height: 150px; width: 100%;">
+  </section>
   <section class="p-5 text-center">
     <div class="container">
       <div class="row">
@@ -139,7 +137,7 @@
     </div>
   </section>
 
-  <section class="text-center text-black bg-yellow">
+  <section class="text-center text-black bg-white">
     <div class="container p-5">
       <div class="row justify-content-center">
         <div class="col-md-8">
@@ -167,30 +165,28 @@
 
     </div>
   </section>
-
+  <section>
+    <img src="img/waves.png" alt="" style="height: 150px; width: 100%;">
+  </section>
   <footer class="bg-yellow w-100 py-2">
     <div class="container">
-      <footer
+      <div
         class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top border-dark  border-bottom">
         <p class="col-md-4 mb-0 text-muted">&copy; 2022 Bart, Company Incorporated.</p>
-
-        <a href="/"
-          class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-
-        </a>
-
+        <a href="#"
+          class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none"></a>
         <ul class="nav col-md-4 justify-content-end">
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted text-black">Home</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+          <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted text-black">Home</a></li>
+          <li class="nav-item"><a href="edgerunners.html" class="nav-link px-2 display-3 text-muted">Edgerunners</a>
+          </li>
+          <li class="nav-item"><a href="comics.html" class="nav-link px-2 text-muted">Comics</a></li>
+          <li class="nav-item"><a href="game.html" class="nav-link px-2 text-muted">Game</a></li>
+          <li class="nav-item"><a href="lore.html" class="nav-link px-2 text-muted">Lore</a></li>
         </ul>
-      </footer>
+      </div>
     </div>
-
-
   </footer>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
