everything in one css file

--- a/game.html
+++ b/game.html
@@ -10,18 +10,13 @@
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="cyberpunk.css">
   <link rel="stylesheet" href="cyberpunk-effects.css">
-  <link rel="stylesheet" href="cyber_btn.css">
-  <link rel="stylesheet" href="game.css">
 </head>
-
 <body>
 
   <section class="nav-bar bg-black shadow-lg">
     <nav class="navbar navbar-expand-lg ">
       <div class="container-fluid">
-
         <a class="navbar-brand" href="index.html"> <img src="img/arasaka.webp" alt="sss" class="glitch px-2"> </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,7 +24,6 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
-
             <li class="nav-item">
               <a class="nav-link" target="_blank" href="index.html">CYBERPUNK</a>
             </li>
@@ -49,15 +43,12 @@
         </div>
       </div>
     </nav>
-
-
   </section>
 
   <section class="cyberpunk-wrapper bg-dark">
-
     <img src="img/v-male.jpg" class="img-fluid" alt="">
-
   </section>
+
   <!-- V poster -> main Content -->
   <section class="v-content-wrapper align-content-center p-0">
     <div class="row v-section align-content-center">
@@ -71,7 +62,6 @@
             <span class="btn__label">r69</span>
           </button>
 
-
           <button class="cyber-btn btn--secondary">
             <span class="btn__content">_Edgerunners_</span>
             <span class="btn__glitch"></span>
@@ -79,21 +69,17 @@
           </button>
         </div>
       </div>
-
     </div>
-
-
   </section>
+
   <section class=" cyberpunk black">
     <div class=" py-3">
-
       <h1 class="cyberpunk glitched">Cyberpunk 2077 Game of the year because it's bugged like damn</h1>
       <p class="cyberpunk inverse scannedv"><a href="#"> Cyberpunk 2077</a> is an action role-playing video game
         developed by CD Projekt Red and published by CD Projekt. The story takes place in Night City, an open world set
         in the Cyberpunk universe. We are playing as V. Main Hero of the Night City. His friend Jackie Welles is dead
         because of the heist at Konpeki Plaza to steal a <a href="#">Relic</a> For more Informations be sure that you
         sign to our newsletter ! May the chrome be with you !</p>
-
       <div class="row  py-5">
         <div class="col-md-4 j">
           <img src="img/nomad.jpg" alt="ss" style="height: 400px;" class="mx-auto d-block dotted ">
@@ -115,7 +101,6 @@
           <p>Few leave the corporate world with their lives - fewer still with their souls intact. You've been there -
             you've bent the rules, exploited secrets, and weaponized information. There's no such thing as a fair game,
             only winners and losers.</p>
-
         </div>
       </div>
     </div>
@@ -126,7 +111,6 @@
       <h1 class="cyberpunk text-center">Corporations</h1>
       <img src="img/game-corpos.webp" alt="asa" class="img-fluid py-5 ">
       <div class="row">
-
         <div class="col-xxl-4 col-md-6 col-sm-12  px-3 d-flex justify-content-center">
           <div class="card" style="width: 20rem">
             <img src="img/game1.webp" class="card-img-top" alt="..." style="height: 500px">
@@ -135,8 +119,8 @@
               <h6 class="card-subtitle mb-2 text-muted">Weapons and Banks</h6>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
-              <a href="#" class="btn mr-2"><i class="fas fa-link"></i> Visit Site</a>
-              <a href="#" class="btn "><i class="fab fa-reddit"></i></a>
+              <a href="#" class="btn-corpo-card mr-2"><i class="fas fa-link"></i> Visit Site</a>
+              <a href="#" class="btn-corpo-card "><i class="fab fa-reddit"></i> Reddit</a>
             </div>
           </div>
         </div>
@@ -148,8 +132,8 @@
               <h6 class="card-subtitle mb-2 text-muted">Weapons & Security</h6>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
-              <a href="#" class="btn  mr-2"><i class="fas fa-link"></i> Visit Site</a>
-              <a href="#" class="btn"><i class="fab fa-github"></i> Github</a>
+              <a href="#" class="btn-corpo-card  mr-2"><i class="fas fa-link"></i> Visit Site</a>
+              <a href="#" class="btn-corpo-card"><i class="fab fa-twitter"></i> Twitter</a>
             </div>
           </div>
         </div>
@@ -161,12 +145,11 @@
               <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
-              <a href="#" class="btn mr-2"><i class="fas fa-link"></i> Visit Site</a>
-              <a href="#" class="btn "><i class="fab fa-github"></i> Github</a>
+              <a href="#" class="btn-corpo-card mr-2"><i class="fas fa-link"></i> Visit Site</a>
+              <a href="#" class="btn-corpo-card "><i class="fab fa-youtube"></i> Youtube</a>
             </div>
           </div>
         </div>
-
         <div class="col-xxl-4 col-md-6 col-sm-12 px-3 d-flex justify-content-center">
           <div class="card" style="width: 20rem;">
             <img src="img/game4.jpg" class="card-img-top" alt="..." style="height: 500px">
@@ -175,8 +158,8 @@
               <h6 class="card-subtitle mb-2 text-muted">Healthcare * Hospitalization</h6>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
-              <a href="#" class="btn mr-2"><i class="fas fa-link"></i> Visit Site</a>
-              <a href="#" class="btn"><i class="fab fa-github"></i> Github</a>
+              <a href="#" class="btn-corpo-card mr-2"><i class="fas fa-link"></i> Visit Site</a>
+              <a href="#" class="btn-corpo-card"><i class="fab fa-reddit"></i> Reddit</a>
             </div>
           </div>
         </div>
@@ -188,8 +171,8 @@
               <h6 class="card-subtitle mb-2 text-muted">Weapons & Highh Tech</h6>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
-              <a href="#" class="btn mr-2"><i class="fas fa-link"></i> Visit Site</a>
-              <a href="#" class="btn"><i class="fab fa-github"></i> Github</a>
+              <a href="#" class="btn-corpo-card mr-2"><i class="fas fa-link"></i> Visit Site</a>
+              <a href="#" class="btn-corpo-card"><i class="fab fa-twitter"></i> Twitter</a>
             </div>
           </div>
         </div>
@@ -201,8 +184,8 @@
               <h6 class="card-subtitle mb-2 text-muted">Food & Biology</h6>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
-              <a href="#" class="btn mr-2"><i class="fas fa-link"></i> Visit Site</a>
-              <a href="#" class="btn"><i class="fab fa-github"></i> Github</a>
+              <a href="#" class="btn-corpo-card mr-2"><i class="fas fa-link"></i> Visit Site</a>
+              <a href="#" class="btn-corpo-card"><i class="fab fa-youtube"></i> Youtube</a>
             </div>
           </div>
         </div>
@@ -229,6 +212,9 @@
     </div>
   </footer>
 
+  <button type="button" class="btn btn-danger btn-floating " id="btn-back-to-top">
+    <i class="fas fa-arrow-up "></i>
+  </button>
 
   <script src="https://unpkg.com/powerglitch@latest/dist/powerglitch.min.js"></script>
   <script>
@@ -236,6 +222,6 @@
     type = "text/javascript"
     src = "https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.1/mdb.min.js"
   </script>
+  <script src="script.js"></script>
 </body>
-
 </html>
