--- a/edgerunners.html
+++ b/edgerunners.html
@@ -12,7 +12,6 @@
 
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="cyberpunk-effects.css">
-  <link rel="stylesheet" href="edgerunners.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
@@ -49,9 +48,8 @@
         </div>
       </div>
     </nav>
-
-
   </section>
+
   <aside class="cyberpunk">
     <ul>
       <li><a href="#">&#9760; 555 555 555</a></li>
@@ -214,6 +212,7 @@
       </div>
     </div>
   </footer>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
@@ -227,7 +226,7 @@
   <script>
     AOS.init();
   </script>
-
+  <script src="script.js"></script>
 </body>
 
 </html>
