--- a/index.html
+++ b/index.html
@@ -6,16 +6,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
+  <!-- fonts -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
   <!-- MDB -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.1/mdb.min.css" rel="stylesheet" />
+  <!-- AOS Animate On Scroll -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="cyber_btn.css">
+  <link rel="stylesheet" href="cyberpunk-effects.css">
+
 
   <title>Cyberpunk</title>
 </head>
@@ -94,7 +99,7 @@
 
   <!-- gallery -->
   <!-- <section class="cyberpunk"> -->
-  <section class="gallery cyberpunk">
+  <section class="gallery cyberpunk black">
     <div class="container py-5">
       <h2 class="h2_portfolio">Gallery</h2>
       <div class="row gallery-box justify-content-center p-3">
@@ -286,7 +291,7 @@
   </section>
 
   <!-- footer  -->
-  <section class="cyberpunk"></section>
+
 
   <footer class="bg-yellow w-100 py-2">
     <div class="container">
@@ -306,6 +311,9 @@
       </div>
     </div>
   </footer>
+  <button type="button" class="btn btn-danger btn-floating " id="btn-back-to-top">
+    <i class="fas fa-arrow-up "></i>
+  </button>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
@@ -320,7 +328,7 @@
   <script>
     AOS.init();
   </script>
-
+  <script src="script.js"></script>
 
 </body>
 
