--- a/lore.html
+++ b/lore.html
@@ -12,8 +12,6 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="cyberpunk-effects.css">
-  <link rel="stylesheet" href="edgerunners.css">
-  <link rel="stylesheet" href="lore.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
@@ -29,13 +27,10 @@
   <link rel="stylesheet" href="owlcarousel/owl.theme.default.min.css">
 
 </head>
-
 <body>
   <section id="nav-bar">
-
     <nav class="navbar navbar-expand-lg ">
       <div class="container-fluid">
-
         <a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt="sss" class="glitch"> </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -63,6 +58,7 @@
         </div>
       </div>
     </nav>
+
     <section class="bg-dark text-start text-white">
       <div class="container p-3">
         <div class="row align-items-center">
@@ -83,9 +79,12 @@
           </div>
         </div>
       </div>
-
-
     </section>
+
+    <button type="button" class="btn btn-danger btn-floating " id="btn-back-to-top">
+      <i class="fas fa-arrow-up "></i>
+    </button>
+
     <section class="bg-yellow cyberpunk">
       <div class="container ">
         <div class="row py-3">
@@ -99,7 +98,6 @@
           <h3 data-aos="fade-left" class="text-end p-3">
             Soo Let's GO ! Just do it!
           </h3>
-
           <div class=" lead py-4">The timeline of the Cyberpunk series has gone through many iterations, with new
             sourcebooks and games continually expanding on its world. This article covers the canonical timeline
             following events from Cyberpunk 2013 and Cyberpunk 2020, as established by R. Talsorian Games and CD Projekt
@@ -109,16 +107,14 @@
             Other timelines are included within the Japan, China, Soviet Union, Korea, and Australia articles, as well
             as those for South-East Asia and Europe.</div>
           <img src="img/lore1.jpg" alt="asa" class="img-fluid mx-auto" style="width:600px; height:auto;">
-
-
         </div>
         <button type="button" class="btn btn-danger d-grid  mx-auto mb-4" data-bs-toggle="tooltip"
           data-bs-placement="top" data-bs-custom-class="custom-tooltip" data-bs-title="Sorry for bad quality of img">
           Click me !
         </button>
-
       </div>
     </section>
+
     <section class="bg-black">
       <div class="container ">
         <div class="row py-5 justify-content-center">
@@ -126,33 +122,27 @@
             <img src="img/comics4.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">We have impmresive collection of books, comics and guides in our fanbase. Don't be
-                shy an check them all ! </p>
+                shy an check them all !</p>
             </div>
-
-
           </div>
-
           <div data-aos="flip-left" class="col-4 card m-2" style="width: 18rem;">
             <img src="img/edgerunners2.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">The Saint Grall in our colection. On Rotten Tomatoes we gain 100% positive Rating.
                 100% TOMATOMETER and 96% AUDIENCE SCORE. That's IMPRESSIVE !</p>
             </div>
-
-
           </div>
-          <div data-aos="flip-left" class="col-4 card bg-yellow m-2 " style="width: 18rem;">
+          <div data-aos="flip-left" class="col-4 card bg-yellow m-2 " style="width: 18rem;  background-color: #fcee09">
             <img src="img/delamain.png" class="card-img-top pb-5" alt="...">
             <div class="card-body ">
-              <p class="card-text">And Game itself ! Woah The graphic in night city, you need at least RTX 4090 to deal
+              <p class="card-text text-black">And Game itself ! Woah The graphic in night city, you need at least RTX 4090 to deal
                 with it in 4k Hell yeah ! What an immersive!</p>
             </div>
-
-
           </div>
         </div>
       </div>
     </section>
+
     <section class="cyberpunk">
       <div class="container">
         <div class="row">
@@ -177,13 +167,11 @@
           </ol>
         </div>
       </div>
-
     </section>
 
     <footer class="bg-black w-100 py-2">
       <div class="container">
-        <div
-          class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top border-dark  border-bottom">
+        <div class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top border-dark  border-bottom">
           <p class="col-md-4 mb-0 text-muted">&copy; 2022 Bart, Company Incorporated.</p>
           <a href="#"
             class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none"></a>
@@ -198,6 +186,7 @@
         </div>
       </div>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"></script>
