--- a/edgerunners.html
+++ b/edgerunners.html
@@ -5,22 +5,23 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>EDGERUNNERS</title>
+  
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link>
-  <title>EDGERUNNERS</title>
+  <!-- AOS Animate On Scroll -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="cyberpunk-effects.css">
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
-  <section id="nav-bar">
-
-    <nav class="navbar navbar-expand-lg ">
+  <section id="nav-bars">
+    <nav class="navbar navbar-expand-lg text-center">
       <div class="container-fluid">
-
         <a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt="sss" class="glitch"> </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -69,7 +70,7 @@
 
   <section class="bg-yellow border-dark">
     <div class="container py-5">
-      <h2 class="h2_main-text text-center  ">Cyberpunk Edgerunners </h2>
+      <h2 class="h2_main-text text-center">Cyberpunk Edgerunners </h2>
       <div data-aos="fade-up-right" class="row border-top border-dark justify-content-center align-items-center p-4">
         <div class="col-md-3">
           <img src="img/edgerunners1.jpg" alt="ds" class="img-fluid cyberpunk">
@@ -82,7 +83,7 @@
         </div>
       </div>
 
-      <div data-aos="fade-up-right" class="row border-top border-dark justify-content-center align-items-center  p-4">
+      <div data-aos="fade-up-right" class="row border-top border-dark justify-content-center align-items-center p-4">
         <div class="col-md-3">
           <img src="img/edgerunners2.jpg" alt="ds" class="glitch img-fluid cyberpunk">
         </div>
@@ -194,7 +195,7 @@
     </div>
   </section>
 
-  <footer class="bg-yellow w-100 py-2">
+  <footer class="bg-yellow py-2">
     <div class="container">
       <div
         class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top border-dark  border-bottom">
@@ -216,13 +217,17 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
+
   <script src="https://unpkg.com/powerglitch@latest/dist/powerglitch.min.js"></script>
+
   <script>
-    PowerGlitch.glitch('.glitch')
+   PowerGlitch.glitch('.glitch')
     type = "text/javascript"
     src = "https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.1/mdb.min.js"
   </script>
+
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
   <script>
     AOS.init();
   </script>
