--- a/game.html
+++ b/game.html
@@ -6,19 +6,23 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Game</title>
+  
+    <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <!-- icons -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
+  
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="cyberpunk-effects.css">
 </head>
 <body>
 
-  <section class="nav-bar bg-black shadow-lg">
-    <nav class="navbar navbar-expand-lg ">
+  <section class="nav-bar bg-black text-center">
+    <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html"> <img src="img/arasaka.webp" alt="sss" class="glitch px-2"> </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        <button class="navbar-toggler bg-danger" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -45,7 +49,7 @@
     </nav>
   </section>
 
-  <section class="cyberpunk-wrapper bg-dark">
+  <section class="bg-dark">
     <img src="img/v-male.jpg" class="img-fluid" alt="">
   </section>
 
@@ -72,15 +76,15 @@
     </div>
   </section>
 
-  <section class=" cyberpunk black">
-    <div class=" py-3">
+  <section class="cyberpunk black">
+    <div class="py-3">
       <h1 class="cyberpunk glitched">Cyberpunk 2077 Game of the year because it's bugged like damn</h1>
       <p class="cyberpunk inverse scannedv"><a href="#"> Cyberpunk 2077</a> is an action role-playing video game
         developed by CD Projekt Red and published by CD Projekt. The story takes place in Night City, an open world set
         in the Cyberpunk universe. We are playing as V. Main Hero of the Night City. His friend Jackie Welles is dead
         because of the heist at Konpeki Plaza to steal a <a href="#">Relic</a> For more Informations be sure that you
         sign to our newsletter ! May the chrome be with you !</p>
-      <div class="row  py-5">
+      <div class="row py-5">
         <div class="col-md-4 j">
           <img src="img/nomad.jpg" alt="ss" style="height: 400px;" class="mx-auto d-block dotted ">
           <h3>Nomad</h3>
@@ -107,13 +111,13 @@
   </section>
 
   <section class="bg-yellow">
-    <div class="container mx-auto  py-4">
+    <div class="container mx-auto py-4">
       <h1 class="cyberpunk text-center">Corporations</h1>
-      <img src="img/game-corpos.webp" alt="asa" class="img-fluid py-5 ">
+      <img src="img/game-corpos.webp" alt="asa" class="img-fluid py-5">
       <div class="row">
         <div class="col-xxl-4 col-md-6 col-sm-12  px-3 d-flex justify-content-center">
           <div class="card" style="width: 20rem">
-            <img src="img/game1.webp" class="card-img-top" alt="..." style="height: 500px">
+            <img src="img/game1.webp" class="card-img-top" alt="..." style="height: 500px;">
             <div class="card-body">
               <h5 class="card-title">Arasaka</h5>
               <h6 class="card-subtitle mb-2 text-muted">Weapons and Banks</h6>
@@ -126,7 +130,7 @@
         </div>
         <div class="col-xxl-4 col-md-6 col-sm-12 px-3 d-flex justify-content-center">
           <div class="card" style="width: 20rem;">
-            <img src="img/game2.webp" class="card-img-top" alt="..." style="height: 500px">
+            <img src="img/game2.webp" class="card-img-top" alt="..." style="height: 500px;">
             <div class="card-body">
               <h5 class="card-title">Militech</h5>
               <h6 class="card-subtitle mb-2 text-muted">Weapons & Security</h6>
@@ -139,7 +143,7 @@
         </div>
         <div class="col-xxl-4 col-md-6 col-sm-12 px-3 d-flex justify-content-center">
           <div class="card" style="width: 20rem;">
-            <img src="img/game3.webp" class="card-img-top" alt="..." style="height: 500px">
+            <img src="img/game3.webp" class="card-img-top" alt="..." style="height: 500px;">
             <div class="card-body">
               <h5 class="card-title">Zetatech</h5>
               <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
@@ -152,7 +156,7 @@
         </div>
         <div class="col-xxl-4 col-md-6 col-sm-12 px-3 d-flex justify-content-center">
           <div class="card" style="width: 20rem;">
-            <img src="img/game4.jpg" class="card-img-top" alt="..." style="height: 500px">
+            <img src="img/game4.jpg" class="card-img-top" alt="..." style="height: 500px;">
             <div class="card-body">
               <h5 class="card-title">Trauma Team</h5>
               <h6 class="card-subtitle mb-2 text-muted">Healthcare * Hospitalization</h6>
@@ -165,7 +169,7 @@
         </div>
         <div class="col-xxl-4 col-md-6  px-3 d-flex justify-content-center">
           <div class="card" style="width: 20rem;">
-            <img src="img/game5.webp" class="card-img-top" alt="..." style="height: 500px">
+            <img src="img/game5.webp" class="card-img-top" alt="..." style="height: 500px;">
             <div class="card-body">
               <h5 class="card-title">Kang Tao</h5>
               <h6 class="card-subtitle mb-2 text-muted">Weapons & Highh Tech</h6>
@@ -176,9 +180,9 @@
             </div>
           </div>
         </div>
-        <div class="col-xxl-4 col-md-6  px-3 d-flex justify-content-center">
+        <div class="col-xxl-4 col-md-6 px-3 d-flex justify-content-center">
           <div class="card" style="width: 20rem;">
-            <img src="img/game6.jpg" class="card-img-top" alt="..." style="height: 500px">
+            <img src="img/game6.jpg" class="card-img-top" alt="..." style="height: 500px;">
             <div class="card-body">
               <h5 class="card-title">Biotechnica</h5>
               <h6 class="card-subtitle mb-2 text-muted">Food & Biology</h6>
@@ -193,7 +197,7 @@
     </div>
   </section>
 
-  <footer class="bg-yellow w-100 py-2">
+  <footer class="bg-yellow py-2">
     <div class="container">
       <div
         class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top border-dark  border-bottom">
@@ -215,6 +219,10 @@
   <button type="button" class="btn btn-danger btn-floating " id="btn-back-to-top">
     <i class="fas fa-arrow-up "></i>
   </button>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"></script>
 
   <script src="https://unpkg.com/powerglitch@latest/dist/powerglitch.min.js"></script>
   <script>
