--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cyberpunk</title>
 
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-
   <!-- fonts -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
   <!-- Google Fonts -->
@@ -18,28 +18,23 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.1/mdb.min.css" rel="stylesheet" />
   <!-- AOS Animate On Scroll -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="cyberpunk-effects.css">
 
-
-  <title>Cyberpunk</title>
 </head>
-
 <body>
 
   <section id="nav-bar">
-
-    <nav class="navbar navbar-expand-lg ">
+    <nav class="navbar navbar-expand-lg text-center">
       <div class="container-fluid">
-
         <a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt="sss" class="glitch"> </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        <button class="navbar-toggler bg-yellow" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
-
             <li class="nav-item">
               <a class="nav-link" target="_blank" href="index.html">CYBERPUNK</a>
             </li>
@@ -59,8 +54,6 @@
         </div>
       </div>
     </nav>
-
-
   </section>
 
   <section class="video">
@@ -68,7 +61,6 @@
       <div class="video-bg d-flex  align-items-center">
         <video autoplay loop muted plays-inline id="video">
           <source src="video/Cyberpunk-2077-City.mp4" type="video/mp4">
-
         </video>
         <div class="row justify-content-center">
           <div class="col-md-8 p-3">
@@ -82,7 +74,6 @@
                 <span class="btn__label">r69</span>
               </button>
 
-
               <button class="cyber-btn btn--secondary">
                 <span class="btn__content">_Edgerunners_</span>
                 <span class="btn__glitch"></span>
@@ -95,15 +86,12 @@
     </div>
   </section>
 
-
-
   <!-- gallery -->
-  <!-- <section class="cyberpunk"> -->
+
   <section class="gallery cyberpunk black">
     <div class="container py-5">
       <h2 class="h2_portfolio">Gallery</h2>
       <div class="row gallery-box justify-content-center p-3">
-
         <div class=" col-lg-6 p-3">
           <img src="img/cyber_1.jpg" alt="sss" class="cyberpunk d-block mx-auto">
         </div>
@@ -111,9 +99,7 @@
           <img src="img/cyber_2.jpg" alt="sss" class="cyberpunk d-block mx-auto">
         </div>
       </div>
-
       <div class="row gallery-box justify-content-center">
-
         <div class=" col-lg-6 p-3">
           <img src="img/cyber_3.jpg" alt="sss" class="cyberpunk d-block mx-auto">
         </div>
@@ -122,7 +108,6 @@
         </div>
       </div>
       <div class="row gallery-box justify-content-center">
-
         <div class=" col-lg-6 p-3">
           <img src="img/cyber_5.jpg" alt="sss" class="cyberpunk d-block mx-auto">
         </div>
@@ -131,7 +116,6 @@
         </div>
       </div>
       <div class="row gallery-box justify-content-center">
-
         <div class=" col-lg-6 p-3">
           <img src="img/cyber_7.jpg" alt="sss" class="cyberpunk d-block mx-auto">
         </div>
@@ -140,25 +124,18 @@
         </div>
       </div>
     </div>
-
   </section>
-
-
 
   <section class="testimonial p-5 bg-yellow w-100">
     <div class="container justify-content-center py-3 py-md-0 mx-auto">
-
       <div class="row">
         <div class="col-md-12 col-xxl-6">
           <p class="text-dark lead">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
-        <div class="col-md-0 col-xxl-6 ">
+        <div class="col-md-0 col-xxl-6">
           <img src="img/delamain.png" alt="sss" class="delamain-img glitch">
-
         </div>
       </div>
-
-
       <div class="row mx-auto">
         <div class="col-md-12 col-xxl-6">
           <p class="text-dark lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis odit vitae
@@ -168,11 +145,7 @@
         <div class="col-md-0 col-xxl-6">
           <img src="img/delamain.png" alt="sss" class="delamain-img glitch">
         </div>
-
-
       </div>
-
-
       <div class="row">
         <div class="col-md-12 col-xxl-6">
           <p class="text-dark lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis odit vitae
@@ -184,7 +157,6 @@
               <span class="btn__label">r69</span>
             </button>
 
-
             <button class="cyber-btn btn--secondary m-3">
               <span class="btn__content">_Edgerunners_</span>
               <span class="btn__glitch"></span>
@@ -192,12 +164,10 @@
             </button>
           </div>
         </div>
-
-
       </div>
     </div>
-
   </section>
+
   <section class="bg-black py-5">
     <div class="container">
       <div class="row text-center align-items-center justify-content-center">
@@ -207,7 +177,6 @@
           <p class="lead text-yellow">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod vero beatae ipsam,
             quae earum rerum sit enim consequuntur quidem cupiditate corrupti repudiandae aliquam sapiente veniam
             aliquid quasi. Magni, quas commodi?</p>
-
         </div>
         <div class="col-xl-6 px-3 col-sm-12">
           <img src="img/rogue.png" class="img-fluid" alt="sss">
@@ -243,16 +212,13 @@
     </div>
   </section>
 
-
-
   <!-- socials  ikony z linkami -->
+
   <section class="bg-black py-5">
     <div class="container py-5">
       <h2 class="h2_portfolio text-center">Meine Soocials</h2>
-
-
-      <div class="row d-flex p-3 justify-content-around ">
-        <div class="card cards-version-cyber mb-3" style="max-width: 18rem;">
+      <div class="row d-flex p-3 justify-content-around">
+        <div class="card cards-version-cyber mb-3 bg-black" style="max-width: 18rem;">
           <div class="card-header align-self-center"><i class="fab fa-twitter"></i></div>
           <div class="card-body">
             <h5 class="card-title text-white">Twitter gdybyś chciał coś tego..</h5>
@@ -260,7 +226,7 @@
               the card's content.</p>
           </div>
         </div>
-        <div class="card cards-version-cyber mb-3" style="max-width: 18rem;">
+        <div class="card cards-version-cyber mb-3 bg-black" style="max-width: 18rem;">
           <div class="card-header align-self-center"><i class="fab fa-github"></i></div>
           <div class="card-body">
             <h5 class="card-title text-white">Warto zobaczyć a nuż Bartek zachwyci czymś niezwykłym</h5>
@@ -268,14 +234,14 @@
               najlepszego nawiwijał</p>
           </div>
         </div>
-        <div class="card cards-version-cyber mb-3" style="max-width: 18rem;">
+        <div class="card cards-version-cyber mb-3 bg-black" style="max-width: 18rem;">
           <div class="card-header align-self-center"><i class="fab fa-reddit"></i></div>
           <div class="card-body">
             <h5 class="card-title text-white">Nic wartego Patrzenia</h5>
             <p class="card-text text-white">Stek bzdur i tego typu</p>
           </div>
         </div>
-        <div class="card  mb-3 cards-version-cyber" style="max-width: 18rem;">
+        <div class="card  mb-3 cards-version-cyber bg-black" style="max-width: 18rem;">
           <div class="card-header align-self-center"><i class="fas fa-american-sign-language-interpreting"></i></div>
           <div class="card-body">
             <h5 class="card-title text-white">Migowy</h5>
@@ -285,15 +251,12 @@
           </div>
         </div>
       </div>
-
-
     </div>
   </section>
 
   <!-- footer  -->
 
-
-  <footer class="bg-yellow w-100 py-2">
+  <footer class="bg-yellow py-2">
     <div class="container">
       <div
         class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top border-dark  border-bottom">
@@ -318,18 +281,22 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
+
   <script src="https://unpkg.com/powerglitch@latest/dist/powerglitch.min.js"></script>
+
   <script>
     PowerGlitch.glitch('.glitch')
     type = "text/javascript"
     src = "https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.1/mdb.min.js"
   </script>
+
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
   <script>
     AOS.init();
   </script>
+  
   <script src="script.js"></script>
 
 </body>
-
 </html>
