--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse " id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
               <a class="nav-link" target="_blank" href="index.html">CYBERPUNK</a>
@@ -217,8 +217,8 @@
   <section class="bg-black py-5">
     <div class="container py-5">
       <h2 class="h2_portfolio text-center">Meine Soocials</h2>
-      <div class="row d-flex p-3 justify-content-around">
-        <div class="card cards-version-cyber mb-3 bg-black" style="max-width: 18rem;">
+      <div class="row d-flex p-3  justify-content-around">
+        <div class="col-12 col-lg-3 mx-2 card cards-version-cyber  bg-black" >
           <div class="card-header align-self-center"><i class="fab fa-twitter"></i></div>
           <div class="card-body">
             <h5 class="card-title text-white">Twitter gdybyś chciał coś tego..</h5>
@@ -226,7 +226,7 @@
               the card's content.</p>
           </div>
         </div>
-        <div class="card cards-version-cyber mb-3 bg-black" style="max-width: 18rem;">
+        <div class="col-12 col-lg-3 mx-2 card cards-version-cyber  bg-black" >
           <div class="card-header align-self-center"><i class="fab fa-github"></i></div>
           <div class="card-body">
             <h5 class="card-title text-white">Warto zobaczyć a nuż Bartek zachwyci czymś niezwykłym</h5>
@@ -234,14 +234,14 @@
               najlepszego nawiwijał</p>
           </div>
         </div>
-        <div class="card cards-version-cyber mb-3 bg-black" style="max-width: 18rem;">
+        <div class="col-10 col-lg-3 mx-2 card cards-version-cyber  bg-black" >
           <div class="card-header align-self-center"><i class="fab fa-reddit"></i></div>
           <div class="card-body">
             <h5 class="card-title text-white">Nic wartego Patrzenia</h5>
             <p class="card-text text-white">Stek bzdur i tego typu</p>
           </div>
         </div>
-        <div class="card  mb-3 cards-version-cyber bg-black" style="max-width: 18rem;">
+        <div class="col-10 col-lg-3 mx-2 card cards-version-cyber bg-black" >
           <div class="card-header align-self-center"><i class="fas fa-american-sign-language-interpreting"></i></div>
           <div class="card-body">
             <h5 class="card-title text-white">Migowy</h5>
