--- a/game.html
+++ b/game.html
@@ -115,81 +115,93 @@
       <h1 class="cyberpunk text-center">Corporations</h1>
       <img src="img/game-corpos.webp" alt="asa" class="img-fluid py-5">
       <div class="row">
-        <div class="col-xxl-4 col-md-6 col-sm-12  px-3 d-flex justify-content-center">
-          <div class="card" style="width: 20rem">
+        <div class="col-xxl-4 col-md-6 col-sm-12 px-3 d-flex justify-content-center">
+          <div class="card">
             <img src="img/game1.webp" class="card-img-top" alt="..." style="height: 500px;">
             <div class="card-body">
               <h5 class="card-title">Arasaka</h5>
               <h6 class="card-subtitle mb-2 text-muted">Weapons and Banks</h6>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
-              <a href="#" class="btn-corpo-card mr-2"><i class="fas fa-link"></i> Visit Site</a>
-              <a href="#" class="btn-corpo-card "><i class="fab fa-reddit"></i> Reddit</a>
+                <div class="btn-corpo-wrapper">
+                  <a href="#" class="btn-corpo-card"><i class="fas fa-link"></i> Visit Site</a>
+                  <a href="#" class="btn-corpo-card mx-3"><i class="fab fa-reddit"></i> Reddit</a>
+                </div>
             </div>
           </div>
         </div>
         <div class="col-xxl-4 col-md-6 col-sm-12 px-3 d-flex justify-content-center">
-          <div class="card" style="width: 20rem;">
+          <div class="card" >
             <img src="img/game2.webp" class="card-img-top" alt="..." style="height: 500px;">
             <div class="card-body">
               <h5 class="card-title">Militech</h5>
               <h6 class="card-subtitle mb-2 text-muted">Weapons & Security</h6>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
-              <a href="#" class="btn-corpo-card  mr-2"><i class="fas fa-link"></i> Visit Site</a>
-              <a href="#" class="btn-corpo-card"><i class="fab fa-twitter"></i> Twitter</a>
+                <div class="btn-corpo-wrapper">
+                  <a href="#" class="btn-corpo-card"><i class="fas fa-link"></i> Visit Site</a>
+                  <a href="#" class="btn-corpo-card mx-3"><i class="fab fa-twitter"></i> Twitter</a>
+                </div>
             </div>
           </div>
         </div>
         <div class="col-xxl-4 col-md-6 col-sm-12 px-3 d-flex justify-content-center">
-          <div class="card" style="width: 20rem;">
+          <div class="card">
             <img src="img/game3.webp" class="card-img-top" alt="..." style="height: 500px;">
             <div class="card-body">
               <h5 class="card-title">Zetatech</h5>
               <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
-              <a href="#" class="btn-corpo-card mr-2"><i class="fas fa-link"></i> Visit Site</a>
-              <a href="#" class="btn-corpo-card "><i class="fab fa-youtube"></i> Youtube</a>
+                <div class="btn-corpo-wrapper">
+                  <a href="#" class="btn-corpo-card"><i class="fas fa-link"></i> Visit Site</a>
+                  <a href="#" class="btn-corpo-card mx-3"><i class="fab fa-youtube"></i> Youtube</a>
+                </div>
             </div>
           </div>
         </div>
         <div class="col-xxl-4 col-md-6 col-sm-12 px-3 d-flex justify-content-center">
-          <div class="card" style="width: 20rem;">
+          <div class="card">
             <img src="img/game4.jpg" class="card-img-top" alt="..." style="height: 500px;">
             <div class="card-body">
               <h5 class="card-title">Trauma Team</h5>
               <h6 class="card-subtitle mb-2 text-muted">Healthcare * Hospitalization</h6>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
-              <a href="#" class="btn-corpo-card mr-2"><i class="fas fa-link"></i> Visit Site</a>
-              <a href="#" class="btn-corpo-card"><i class="fab fa-reddit"></i> Reddit</a>
+                <div class="btn-corpo-wrapper">
+                  <a href="#" class="btn-corpo-card"><i class="fas fa-link"></i> Visit Site</a>
+                  <a href="#" class="btn-corpo-card mx-3"><i class="fab fa-reddit"></i> Reddit</a>
+                </div>
             </div>
           </div>
         </div>
-        <div class="col-xxl-4 col-md-6  px-3 d-flex justify-content-center">
-          <div class="card" style="width: 20rem;">
+        <div class="col-xxl-4 col-md-6 col-sm-12 px-3 d-flex justify-content-center">
+          <div class="card">
             <img src="img/game5.webp" class="card-img-top" alt="..." style="height: 500px;">
             <div class="card-body">
               <h5 class="card-title">Kang Tao</h5>
               <h6 class="card-subtitle mb-2 text-muted">Weapons & Highh Tech</h6>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
-              <a href="#" class="btn-corpo-card mr-2"><i class="fas fa-link"></i> Visit Site</a>
-              <a href="#" class="btn-corpo-card"><i class="fab fa-twitter"></i> Twitter</a>
+                <div class="btn-corpo-wrapper">
+                  <a href="#" class="btn-corpo-card"><i class="fas fa-link"></i> Visit Site</a>
+                  <a href="#" class="btn-corpo-card mx-3"><i class="fab fa-twitter"></i> Twitter</a>
+                </div>
             </div>
           </div>
         </div>
-        <div class="col-xxl-4 col-md-6 px-3 d-flex justify-content-center">
-          <div class="card" style="width: 20rem;">
+        <div class="col-xxl-4 col-md-6 col-sm-12 px-3 d-flex justify-content-center">
+          <div class="card" >
             <img src="img/game6.jpg" class="card-img-top" alt="..." style="height: 500px;">
             <div class="card-body">
               <h5 class="card-title">Biotechnica</h5>
               <h6 class="card-subtitle mb-2 text-muted">Food & Biology</h6>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
-              <a href="#" class="btn-corpo-card mr-2"><i class="fas fa-link"></i> Visit Site</a>
-              <a href="#" class="btn-corpo-card"><i class="fab fa-youtube"></i> Youtube</a>
+                <div class="btn-corpo-wrapper">
+              <a href="#" class="btn-corpo-card"><i class="fas fa-link"></i> Visit Site</a>
+              <a href="#" class="btn-corpo-card mx-3"><i class="fab fa-youtube"></i> Youtube</a>
+            </div>
             </div>
           </div>
         </div>
